--- a/NNin11Lines.ipynb
+++ b/NNin11Lines.ipynb
@@ -2,7 +2,34 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 2,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "\n",
+    "X = np.array([ [0,0,1],\n",
+    "               [0,1,1],\n",
+    "               [1,0,1],\n",
+    "               [1,1,1,] ])\n",
+    "y = np.array([[0,1,1,0]]).T\n",
+    "syn0 = 2*np.random.random((3,4)) -1 \n",
+    "syn1 = 2*np.random.random((4,1)) -1\n",
+    "for j in range(60000):\n",
+    "    l1 = 1 / (1+np.exp(-(np.dot(X, syn0))))\n",
+    "    l2 = 1 / (1+np.exp(-(np.dot(l1, syn1))))\n",
+    "    l2_delta = (y - l2)*(l2*(1-l2))\n",
+    "    l1_delta = l2_delta.dot(syn1.T) * (l1*(1-l1))\n",
+    "    \n",
+    "    syn1 += l1.T.dot(l2_delta)\n",
+    "    syn0 += X.T.dot(l1_delta)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
@@ -214,55 +241,6 @@
     "    syn1 += l1.T.dot(l2_delta)\n",
     "    syn0 += l0.T.dot(l1_delta)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 35,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "-0.999771250365"
-      ]
-     },
-     "execution_count": 35,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 36,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "1.0"
-      ]
-     },
-     "execution_count": 36,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
